fixed line overlap when wrapping h1 and h2
spacing might need to be specified even bigger.
other headers might require update.

--- a/static/css/nucleus.css
+++ b/static/css/nucleus.css
@@ -510,10 +510,14 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 3.25rem; }
+  font-size: 3.25rem; 
+  line-height: 3.20rem;
+}
 
 h2 {
-  font-size: 2.55rem; }
+  font-size: 2.55rem; 
+  line-height: 2.50rem;
+}
 
 h3 {
   font-size: 2.15rem; }
